# AdventOfCode2024

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
AdventOfCode2024/: day.hpp  day01.cpp  day01A.cpp  day01B.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  main.cpp  utils.cpp  utils.hpp
